// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button unit tests should match danger btn snapshot 1`] = `
<button
  className="bg-red-dark hover:bg-red-darker text-white font-bold py-2 px-4 rounded-full "
  data-test="button"
  onClick={[Function]}
>
  <p />
</button>
`;

exports[`button unit tests should match default btn snapshot 1`] = `
<button
  className="bg-indigo-dark hover:bg-indigo-darker text-white font-bold py-2 px-4 rounded-full "
  data-test="button"
  onClick={[Function]}
>
  <p />
</button>
`;
